--- a/style.css
+++ b/style.css
@@ -14,6 +14,9 @@
 
 .contact-us>button{
     margin: 4px;
+    color:aqua;
+    background-color: rgb(240, 27, 137);
+    border-radius: 2px;
 }
 
 img{
@@ -33,10 +36,12 @@ img{
     background-color: aqua;
     text-align: center;
     margin: 2px;
-    padding: 30px;
+    padding: 3px;
+    padding-top: 0px;
     border: 1px solid green;
     width: 250px;
-    height: 350px;
+    height: 400px;
+    
 }
 
 .navBar{
