--- a/style.css
+++ b/style.css
@@ -54,17 +54,20 @@ img{
 }
 
 
-skeleton-container{
+.skeleton-container{
     background-color: beige;
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;    
 }
 
-skeleton{
-    background-color: rgb(158, 164, 164);
+.skeleton{
+    background-color: rgb(182, 184, 184);
     text-align: center;
     margin: 2px;
     padding: 3px;
     padding-top: 0px;
-    border: 1px solid rgb(50, 50, 50);
+    border: 1px solid rgb(238, 216, 216);
     width: 250px;
     height: 400px;
 }
