--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
+/* 
 .title{
     color: rgb(70, 154, 233);
     margin:0px;
@@ -72,7 +78,7 @@ img{
     height: 400px;
 }
 
-/* text-decoration in css */
 .text-deco{
     text-decoration: none;
 }
+ */
